# rumur-romp

./: .gitignore  CMakeLists.txt  Untitled.ipynb  cachegrind.out.1999
librumur/: CMakeLists.txt
librumur/include/rumur/: Decl.h  Expr.h  Rule.h  Stmt.h  TypeExpr.h  custom_traversal.hpp  ext_travers.h  traverse.h
librumur/include/rumur/ext/: Expr.h  Function.h  Rule.h  Stmt.h  TypeExpr.h  builtins.h  make_legacy.h  travers.h  un-ext.h
librumur/src/: Comment.cc  Expr.cc  Rule.cc  Stmt.cc  TypeExpr.cc  ext_Expr.cc  ext_Function.cc  ext_Rule.cc  ext_Rule.h  ext_Stmt.cc  ext_TypeExpr.cc  ext_builtins.cc  ext_make_legacy.cc  ext_traverse.cc  ext_un-ext.cc  lexer.l  parser.yy  resolve-symbols.cc  validate.cc
romp/: CMakeLists.txt
romp/doc/: romp.1
romp/resources/: .romp-rw-options.hpp.swp  c_prefix.c  c_prefix.cpp  example-trace.json  romp-main.hpp  romp-rw-cli-options.hpp  romp-rw-cli.hpp  romp-rw-main.hpp  romp-rw-options.hpp  romp-rw-sim.hpp  romp-rw.hpp  romp-rw_pregen-fix.hpp  romp.hpp
romp/src/: CLikeGenerator.cc  CLikeGenerator.cpp  CLikeGenerator.hpp  CTypeGenerator.cpp  CTypeGenerator.hpp  CodeGenerator.cc  CodeGenerator.cpp  CodeGenerator.h  CodeGenerator.hpp  ModelSplitter.cpp  ModelSplitter.hpp  NestedError.cpp  NestedError.hpp  SigPerm.cpp  SigPerm.hpp  StateSpaceCalc.cpp  generate_c.cc  generate_c.cpp  generate_c.hpp  main.cc  nested_escape.cpp  options.cc  options.h  resources.h  romp_def.cpp  romp_def.hpp
romp/src/model/: IModel.cpp  IModel.hpp  IType.hpp  TModel.cpp  TModel.hpp
romp/tests/: abp  abp.cpp  arbiter  arbiter.cpp  cache3.cpp  client.cpp  dpnew  dpnew.cpp  mcslock2  mcslock2.cpp  n_peterson.bug.1.m  n_peterson.bug.m  pingpong  pingpong.cpp  sort5  sort5.cpp  symmetry_test.py  trace_stats.py
tests/: germain-rw.test  german-romp-rw.cpp  german-romp.cpp  german-rw-test.cpp  german-rw.test  german.c  rule-set-bounds.tmp.m
